Адаптация всех 3 страниц

--- a/source/form.html
+++ b/source/form.html
@@ -10,139 +10,173 @@
 </head>
 
 <body class="page__body">
-  <div class="page__body-wrapper">
-    <header class="page-header page-header__white-background">
-      <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
-      <a class="page-header__title-link" href="index.html"></a>
-      <button class="page-header__toggle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
-      <nav class="main-nav">
-        <ul class="main-nav__list">
-          <li class="main-nav__item">
-            <a class="main-nav__link " href="index.html">главная</a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--active" href="catalog.html">каталог продукции</a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">подбор программы</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+  <div class="page__body-outer-wrapper">
+    <div class="page-header__wrapper">
+      <header class="page-header">
+        <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
+        <a class="page-header__title-link" href="index.html"></a>
+        <button class="page-header__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <nav class="main-nav main-nav--closed">
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="index.html">главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="catalog.html">каталог продукции</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--active" href="form.html">подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
     <main class="page__main">
-      <h1 class="main-title visually-hidden">Форма регистрации для подбора программы Cat energy</h1>
-      <section class="bio-data">
-        <h2 class="bio-data__title">Подбор программы</h2>
-        <p class="bio-data__description">Заполните анкету, и мы подберем программу питания для вашего кота</p>
-        <form class="data-form" action="https://echo.htmlacademy.ru/" method="post">
-          <ul class="data-form__list underline-list">
-            <li class="data-form__item">
-              <label class="data-form__label" for="name">Имя:*</label>
-              <input class="data-form__input" type="text" name="name" id="name" placeholder="Барсик">
-            </li>
-            <li class="data-form__item">
-              <label class="data-form__label" for="weight">Вес (КГ):*</label>
-              <input class="data-form__input" type="text" name="weight" id="weight" placeholder="7">
-            </li>
-            <li class="data-form__item">
-              <label class="data-form__label" for="age">Возраст (ЛЕТ):</label>
-              <input class="data-form__input" type="text" name="age" id="age" placeholder="7">
-            </li>
-          </ul>
-          <ul class="data-form__list2 underline-list">
-            <li class="data-form__item">
-              <input class="data-form__radio" type="radio" name="weight-change" value="loss" checked>
-              <span class="data-form__program-label">Похудение</span>
-            </li>
-            <li class="data-form__item">
-              <input class="data-form__radio" type="radio" name="weight-change" value="gain">
-              <span class="data-form__program-label">Набор массы</span>
-            </li>
-            <li class="data-form__item">
-              <input class="data-form__radio" type="radio" name="weight-change" value="unknown">
-              <span class="data-form__program-label">Не знаю (нужен ваш совет)</span>
-            </li>
-          </ul>
-          <div class="data-form__contacts-wrapper">
-            <h3 class="data-form__title">Контактные данные<br> (владельца кота)</h3>
-            <ul class="data-form__list">
-              <li class="data-form__item">
-                <label class="data-form__label" for="email">E-mail:*</label>
-                <input class="data-form__input contacts-input" type="email" name="email" id="email"
-                  placeholder="KUKLACHEV@GMAIL.COM">
-              </li>
-              <li class="data-form__item">
-                <label class="data-form__label" for="phone">Телефон:*</label>
-                <input class="data-form__input" type="tel" name="phone" id="phone" placeholder="8 (960) 900-60-90">
-              </li>
-            </ul>
-          </div>
-          <div class="data-form__comments-wrapper">
-            <h3 class="data-form__title">Комментарий</h3>
-            <div class="data-form__comments">
-              <textarea class="data-form__comment-field" name="comment"
-                placeholder="Расскажите обо всех повадках кота"></textarea>
+      <div class="page__form-wrapper">
+        <h1 class="main-title visually-hidden">Форма регистрации для подбора программы Cat energy</h1>
+        <section class="bio-data">
+          <h2 class="bio-data__title">Подбор программы</h2>
+          <p class="bio-data__description">Заполните анкету, и мы подберем программу питания для вашего кота</p>
+          <form class="data-form" action="https://echo.htmlacademy.ru/" method="post">
+            <div class="data-form__bio-and-program-wrapper">
+              <ul class="data-form__list underline-list">
+                <li class="data-form__item">
+                  <label class="data-form__label" for="name">Имя:*</label>
+                  <input class="data-form__input" type="text" name="name" id="name" placeholder="Барсик">
+                </li>
+                <li class="data-form__item">
+                  <label class="data-form__label" for="weight">Вес (КГ):*</label>
+                  <input class="data-form__input" type="text" name="weight" id="weight" placeholder="7">
+                </li>
+                <li class="data-form__item">
+                  <label class="data-form__label" for="age">Возраст (ЛЕТ):</label>
+                  <input class="data-form__input" type="text" name="age" id="age" placeholder="7">
+                </li>
+              </ul>
+              <ul class="data-form__list2 underline-list">
+                <li class="data-form__item">
+                  <input class="data-form__radio" type="radio" name="weight-change" id="loss" value="loss" checked>
+                  <label class="data-form__program-label" for="loss">Похудение</label>
+                </li>
+                <li class="data-form__item">
+                  <input class="data-form__radio" type="radio" name="weight-change" id="gain" value="gain">
+                  <label class="data-form__program-label" for="gain">Набор массы</label>
+                </li>
+                <li class="data-form__item">
+                  <input class="data-form__radio" type="radio" name="weight-change" id="unknown" value="unknown">
+                  <label class="data-form__program-label" for="unknown">Не знаю (нужен ваш совет)</label>
+                </li>
+              </ul>
             </div>
-          </div>
-          <div class="data-form__extra-wrapper">
-            <h3 class="data-form__title">Дополнительно</h3>
-            <ul class="data-form__list">
-              <li class="data-form__item">
-                <input class="data-form__checkbox-input" type="checkbox" name="extras" checked>
-                <span class="data-form__checkbox-label">сахарозаменитель</span>
-              </li>
-              <li class="data-form__item">
-                <input class="data-form__checkbox-input" type="checkbox" name="extras">
-                <span class="data-form__checkbox-label">питьевая вода</span>
-              </li>
-              <li class="data-form__item">
-                <input class="data-form__checkbox-input" type="checkbox" name="extras">
-                <span class="data-form__checkbox-label">молоко</span>
-              </li>
-              <li class="data-form__item">
-                <input class="data-form__checkbox-input" type="checkbox" name="extras">
-                <span class="data-form__checkbox-label">витамины</span>
-              </li>
-            </ul>
-            <button class="data-form__button button" type="submit">Отправить заявку</button>
-            <p class="data-form__legend">* - Обязательные поля</p>
-          </div>
-        </form>
-      </section>
+            <div class="data-form__contacts-wrapper">
+              <h3 class="data-form__title">Контактные данные (владельца кота)</h3>
+              <ul class="data-form__list">
+                <li class="data-form__item">
+                  <label class="data-form__label" for="email">E-mail:*</label>
+                  <input class="data-form__input contacts-input" type="email" name="email" id="email"
+                    placeholder="KUKLACHEV@GMAIL.COM">
+                </li>
+                <li class="data-form__item">
+                  <label class="data-form__label" for="phone">Телефон:*</label>
+                  <input class="data-form__input" type="tel" name="phone" id="phone" placeholder="8 (960) 900-60-90">
+                </li>
+              </ul>
+            </div>
+            <div class="data-form__comments-wrapper">
+              <h3 class="data-form__title">Комментарий</h3>
+              <div class="data-form__comments">
+                <textarea class="data-form__comment-field" name="comment"
+                  placeholder="Расскажите обо всех повадках кота"></textarea>
+              </div>
+            </div>
+            <div class="data-form__extra-wrapper">
+              <h3 class="data-form__title">Дополнительно</h3>
+              <ul class="data-form__list">
+                <li class="data-form__item">
+                  <input class="data-form__checkbox-input" type="checkbox" name="extras" value="sugar" id="sugar"
+                    checked>
+                  <label class="data-form__checkbox-label" for="sugar">сахарозаменитель</label>
+                </li>
+                <li class="data-form__item">
+                  <input class="data-form__checkbox-input" type="checkbox" name="extras" value="water" id="water">
+                  <label class="data-form__checkbox-label" for="water">питьевая вода</label>
+                </li>
+                <li class="data-form__item">
+                  <input class="data-form__checkbox-input" type="checkbox" name="extras" value="milk" id="milk">
+                  <label class="data-form__checkbox-label" for="milk">молоко</label>
+                </li>
+                <li class="data-form__item">
+                  <input class="data-form__checkbox-input" type="checkbox" name="extras" value="vitamin" id="vitamin">
+                  <label class="data-form__checkbox-label" for="vitamin">витамины</label>
+                </li>
+              </ul>
+              <div class="data-form__button-wrapper">
+                <button class="data-form__button button" type="submit">Отправить заявку</button>
+                <p class="data-form__legend">* - Обязательные поля</p>
+              </div>
+            </div>
+          </form>
+        </section>
+      </div>
     </main>
     <footer class="page__footer">
       <section class="footer-contacts footer-contacts--white-background">
-        <h2 class="visually-hidden">Контакты</h2>
-        <p class="footer-contacts__invitation">приглашаем к сотрудничеству дилеров!</p>
-        <address class="footer-contacts__address">ул. Большая Конюшенная, д. 19/8 <br>
-          Санкт-Петербург </address>
-        <img class="contacts__map" src="/img/map.jpg" alt="карта проезда">
-        <!--Временно подставил просто картинку-->
+        <div class="footer-contacts-wrapper">
+          <h2 class="visually-hidden">Контакты</h2>
+          <p class="footer-contacts__invitation">приглашаем <br> к сотрудничеству дилеров!</p>
+          <div class="footer-contacts__address-wrapper">
+            <address class="footer-contacts__address">ул. Большая Конюшенная, д. 19/8</address>
+            <address class="footer-contacts__address">Санкт-Петербург</address>
+          </div>
+        </div>
+        <iframe class="footer-contacts__map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6044350650561!2d30.32194232853899!3d59.938705733169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1643231784919!5m2!1sru!2sua"
+          style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
       </section>
       <section class="footer-media">
-        <h2 class="visually-hidden">Медиа и социальные сети</h2>
-        <a class="footer-media__logo" href="index.html">
-          <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
-            height="24">
-        </a>
-        <ul class="social">
-          <li class="social__item">
-            <a class="social__link vk-logo" href=""></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link insta-logo" href=""></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link fb-logo" href=""></a>
-          </li>
-        </ul>
-        <div class="footer-media__HTML-academy-wrapper">
-          <a class="footer-media__HTML-academy-logo"
-            href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">HTML Academy</a>
+        <div class="footer-media-wrapper">
+          <h2 class="visually-hidden">Медиа и социальные сети</h2>
+          <a class="footer-media__logo" href="index.html">
+            <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
+              height="24">
+          </a>
+          <ul class="social">
+            <li class="social__item">
+              <a class="social__link vk-logo" href=""></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link insta-logo" href=""></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link fb-logo" href=""></a>
+            </li>
+          </ul>
+          <div class="footer-media__HTML-academy-wrapper">
+            <a class="footer-media__HTML-academy-logo"
+              href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">HTML Academy</a>
+          </div>
         </div>
       </section>
     </footer>
   </div>
+
+  <script>
+    var navMain = document.querySelector('.main-nav');
+    var navToggle = document.querySelector('.page-header__toggle');
+
+    navMain.classList.remove('main-nav--nojs');
+
+    navToggle.addEventListener('click', function() {
+      if (navMain.classList.contains('main-nav--closed')) {
+        navMain.classList.remove('main-nav--closed');
+        navToggle.classList.add('page-header__toggle--cross');
+      } else {
+        navMain.classList.add('main-nav--closed');
+        navToggle.classList.remove('page-header__toggle--cross');
+      }
+    });
+  </script>
+
 </body>
