--- a/source/index.html
+++ b/source/index.html
@@ -5,13 +5,17 @@
   <meta charset="utf-8">
   <title>Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicon/fav32.svg" type="image/svg+xml">
+  <link rel="manifest" href="manifest.webmanifest">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
   <!--<link rel="icon" href="favicon.ico">-->
 </head>
 
 <body class="page__body">
   <div class="page__body-outer-wrapper">
-    <!-- <div class="page__body-inner-wrapper"> -->
+
     <div class="page-header__wrapper">
       <header class="page-header">
         <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
@@ -19,7 +23,7 @@
         <button class="page-header__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <nav class="main-nav">
+        <nav class="main-nav main-nav-index main-nav--closed">
           <ul class="main-nav__list">
             <li class="main-nav__item">
               <a class="main-nav__link main-nav__link--active" href="">главная</a>
@@ -34,6 +38,7 @@
         </nav>
       </header>
     </div>
+
     <main class="page__main">
       <h1 class="page__main-title visually-hidden">Cat Energy - функциональное питание для котов</h1>
       <section class="product-info">
@@ -103,24 +108,30 @@
       </div>
       <section class="example">
         <div class="example__wrapper">
-          <h2 class="example__title section-title">Живой пример</h2>
-          <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
-            Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит
-            по
-            16
-            часов в день. </p>
-          <div class="example__results-wrapper">
-            <div class="example__stats-wrapper">
-              <div class="example__weight-wrapper">
-                <p class="example__value">5 КГ</p>
-                <legend class="example__label">снижение веса</legend>
+          <div class="example__text-wrapper">
+            <h2 class="example__title section-title">Живой пример</h2>
+            <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat
+              Energy
+              Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит
+              по
+              16
+              часов в день. </p>
+            <div class="example__results-wrapper">
+              <div class="example__stats-wrapper">
+                <div class="example__weight-wrapper">
+                  <p class="example__value">5 КГ</p>
+                  <legend class="example__label">снижение веса</legend>
+                </div>
+                <div class="example__time-wrapper">
+                  <p class="example__value">60 ДНЕЙ</p>
+                  <legend class="example__label">затрачено времени</legend>
+                </div>
               </div>
-              <div class="example__time-wrapper">
-                <p class="example__value">60 ДНЕЙ</p>
-                <legend class="example__label">затрачено времени</legend>
+              <div class="example__finance-wrapper">
+                <p class="example__finance">Затраты на питание:</p>
+                <p class="example__finance">15 000 РУБ.</p>
               </div>
             </div>
-            <p class="example__finance">Затраты на питание: 15 000 РУБ.</p>
           </div>
           <div class="example__slider">
             <div class="slider__cat-image-wrapper">
@@ -175,6 +186,23 @@
         </div>
       </section>
     </footer>
-    <!-- </div> -->
   </div>
+
+  <script>
+    var navMain = document.querySelector('.main-nav');
+    var navToggle = document.querySelector('.page-header__toggle');
+
+    navMain.classList.remove('main-nav--nojs');
+
+    navToggle.addEventListener('click', function() {
+      if (navMain.classList.contains('main-nav--closed')) {
+        navMain.classList.remove('main-nav--closed');
+        navToggle.classList.add('page-header__toggle--cross');
+      } else {
+        navMain.classList.add('main-nav--closed');
+        navToggle.classList.remove('page-header__toggle--cross');
+      }
+    });
+  </script>
+
 </body>
