--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Кэт энерджи</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <!--<link rel="icon" href="favicon.ico">-->
 </head>
 
 <body class="page__body">
-  <div class="page__body-outer-wrapper">
 
     <div class="page-header__wrapper">
       <header class="page-header">
@@ -46,6 +45,9 @@
               <div class="card-wrapper">
                 <a class="card__link photo-link" href="">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop1.webp 1x, /img/catalog-laptop1@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="/img/catalog-tablet1.webp 1x, /img/catalog-tablet1@2x.webp 2x">
+                    <source type="image/webp" srcset="/img/catalog-mobile1.webp 1x, /img/catalog-mobile1@2x.webp 2x">
                     <source media="(min-width: 1440px)" srcset="/img/catalog-laptop1.png 1x, /img/catalog-laptop1@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="/img/catalog-tablet1.png 1x, /img/catalog-tablet1@2x.png 2x">
                     <img class="card__photo card__photo-small" src="/img/catalog-mobile1.png" srcset="/img/catalog-mobile1@2x.png"
@@ -88,6 +90,9 @@
               <div class="card-wrapper">
                 <a class="card__link photo-link" href="">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop2.webp 1x, /img/catalog-laptop2@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="/img/catalog-tablet2.webp 1x, /img/catalog-tablet2@2x.webp 2x">
+                    <source type="image/webp" srcset="/img/catalog-mobile2.webp 1x, /img/catalog-mobile2@2x.webp 2x">
                     <source media="(min-width: 1440px)" srcset="/img/catalog-laptop2.png 1x, /img/catalog-laptop2@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="/img/catalog-tablet2.png 1x, /img/catalog-tablet2@2x.png 2x">
                     <img class="card__photo card__photo-small" src="/img/catalog-mobile2.png" srcset="/img/catalog-mobile2@2x.png"
@@ -96,7 +101,7 @@
                 </a>
                 <div class="card__text-side">
                   <a class="card__link" href="">
-                    <h3 class="card__title">Cat Energy PRO 500 г</h3>
+                    <h3 class="card__title">Cat Energy PRO 1600 г</h3>
                   </a>
                   <div class="card__product">
                     <ul class="card__details">
@@ -112,13 +117,13 @@
                     </ul>
                     <ul class="card__values">
                       <li class="card__properties">
-                        <p class="card__measure">500 г</p>
+                        <p class="card__measure">1000 г</p>
                       </li>
                       <li class="card__properties">
                         <p class="card__measure">Курица</p>
                       </li>
                       <li class="card__properties">
-                        <p class="card__measure">700 Р.</p>
+                        <p class="card__measure">1000 Р.</p>
                       </li>
                     </ul>
                   </div>
@@ -130,48 +135,9 @@
               <div class="card-wrapper">
                 <a class="card__link photo-link" href="">
                   <picture>
-                    <source media="(min-width: 1440px)" srcset="/img/catalog-laptop3.png 1x, /img/catalog-laptop3@2x.png 2x">
-                    <source media="(min-width: 768px)" srcset="/img/catalog-tablet3.png 1x, /img/catalog-tablet3@2x.png 2x">
-                    <img class="card__photo card__photo-small" src="/img/catalog-mobile3.png" srcset="/img/catalog-mobile3@2x.png"
-                      alt="изображение товара">
-                  </picture>
-                </a>
-                <div class="card__text-side">
-                  <a class="card__link" href="">
-                    <h3 class="card__title">Cat Energy PRO 500 г</h3>
-                  </a>
-                  <div class="card__product">
-                    <ul class="card__details">
-                      <li class="card__properties">
-                        <p class="card__category">Масса</p>
-                      </li>
-                      <li class="card__properties">
-                        <p class="card__category">Вкус</p>
-                      </li>
-                      <li class="card__properties">
-                        <p class="card__category">Цена</p>
-                      </li>
-                    </ul>
-                    <ul class="card__values">
-                      <li class="card__properties">
-                        <p class="card__measure">500 г</p>
-                      </li>
-                      <li class="card__properties">
-                        <p class="card__measure">Курица</p>
-                      </li>
-                      <li class="card__properties">
-                        <p class="card__measure">700 Р.</p>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <a class="card__order button" href="">Заказать</a>
-              </div>
-            </li>
-            <li class="shop__card card">
-              <div class="card-wrapper">
-                <a class="card__link photo-link" href="">
-                  <picture>
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop4.webp 1x, /img/catalog-laptop4@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="/img/catalog-tablet4.webp 1x, /img/catalog-tablet4@2x.webp 2x">
+                    <source type="image/webp" srcset="/img/catalog-mobile4.webp 1x, /img/catalog-mobile4@2x.webp 2x">
                     <source media="(min-width: 1440px)" srcset="/img/catalog-laptop4.png 1x, /img/catalog-laptop4@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="/img/catalog-tablet4.png 1x, /img/catalog-tablet4@2x.png 2x">
                     <img class="card__photo card__photo-small" src="/img/catalog-mobile4.png" srcset="/img/catalog-mobile4@2x.png"
@@ -199,7 +165,7 @@
                         <p class="card__measure">500 г</p>
                       </li>
                       <li class="card__properties">
-                        <p class="card__measure">Курица</p>
+                        <p class="card__measure">Рыба</p>
                       </li>
                       <li class="card__properties">
                         <p class="card__measure">700 Р.</p>
@@ -214,6 +180,54 @@
               <div class="card-wrapper">
                 <a class="card__link photo-link" href="">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop4.webp 1x, /img/catalog-laptop4@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="/img/catalog-tablet4.webp 1x, /img/catalog-tablet4@2x.webp 2x">
+                    <source type="image/webp" srcset="/img/catalog-mobile4.webp 1x, /img/catalog-mobile4@2x.webp 2x">
+                    <source media="(min-width: 1440px)" srcset="/img/catalog-laptop4.png 1x, /img/catalog-laptop4@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="/img/catalog-tablet4.png 1x, /img/catalog-tablet4@2x.png 2x">
+                    <img class="card__photo card__photo-small" src="/img/catalog-mobile4.png" srcset="/img/catalog-mobile4@2x.png"
+                      alt="изображение товара">
+                  </picture>
+                </a>
+                <div class="card__text-side">
+                  <a class="card__link" href="">
+                    <h3 class="card__title">Cat Energy PRO 1000 г</h3>
+                  </a>
+                  <div class="card__product">
+                    <ul class="card__details">
+                      <li class="card__properties">
+                        <p class="card__category">Масса</p>
+                      </li>
+                      <li class="card__properties">
+                        <p class="card__category">Вкус</p>
+                      </li>
+                      <li class="card__properties">
+                        <p class="card__category">Цена</p>
+                      </li>
+                    </ul>
+                    <ul class="card__values">
+                      <li class="card__properties">
+                        <p class="card__measure">1000 г</p>
+                      </li>
+                      <li class="card__properties">
+                        <p class="card__measure">Рыба</p>
+                      </li>
+                      <li class="card__properties">
+                        <p class="card__measure">1000 Р.</p>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <a class="card__order button" href="">Заказать</a>
+              </div>
+            </li>
+            <li class="shop__card card">
+              <div class="card-wrapper">
+                <a class="card__link photo-link" href="">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop5.webp 1x, /img/catalog-laptop5@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="/img/catalog-tablet5.webp 1x, /img/catalog-tablet5@2x.webp 2x">
+                    <source type="image/webp" srcset="/img/catalog-mobile5.webp 1x, /img/catalog-mobile5@2x.webp 2x">
                     <source media="(min-width: 1440px)" srcset="/img/catalog-laptop5.png 1x, /img/catalog-laptop5@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="/img/catalog-tablet5.png 1x, /img/catalog-tablet5@2x.png 2x">
                     <img class="card__photo card__photo-small" src="/img/catalog-mobile5.png" srcset="/img/catalog-mobile5@2x.png"
@@ -241,10 +255,10 @@
                         <p class="card__measure">500 г</p>
                       </li>
                       <li class="card__properties">
-                        <p class="card__measure">Курица</p>
+                        <p class="card__measure">Гречка</p>
                       </li>
                       <li class="card__properties">
-                        <p class="card__measure">700 Р.</p>
+                        <p class="card__measure">400 Р.</p>
                       </li>
                     </ul>
                   </div>
@@ -256,6 +270,9 @@
               <div class="card-wrapper">
                 <a class="card__link photo-link" href="">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop6.webp 1x, /img/catalog-laptop6@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="/img/catalog-tablet6.webp 1x, /img/catalog-tablet6@2x.webp 2x">
+                    <source type="image/webp" srcset="/img/catalog-mobile6.webp 1x, /img/catalog-mobile6@2x.webp 2x">
                     <source media="(min-width: 1440px)" srcset="/img/catalog-laptop6.png 1x, /img/catalog-laptop6@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="/img/catalog-tablet6.png 1x, /img/catalog-tablet6@2x.png 2x">
                     <img class="card__photo card__photo-small" src="/img/catalog-mobile6.png" srcset="/img/catalog-mobile6@2x.png"
@@ -264,7 +281,7 @@
                 </a>
                 <div class="card__text-side">
                   <a class="card__link" href="">
-                    <h3 class="card__title">Cat Energy PRO 500 г</h3>
+                    <h3 class="card__title">Cat Energy PRO 1000 г</h3>
                   </a>
                   <div class="card__product">
                     <ul class="card__details">
@@ -280,10 +297,10 @@
                     </ul>
                     <ul class="card__values">
                       <li class="card__properties">
-                        <p class="card__measure">500 г</p>
+                        <p class="card__measure">1000 г</p>
                       </li>
                       <li class="card__properties">
-                        <p class="card__measure">Курица</p>
+                        <p class="card__measure">Гречка</p>
                       </li>
                       <li class="card__properties">
                         <p class="card__measure">700 Р.</p>
@@ -298,6 +315,9 @@
               <div class="card-wrapper">
                 <a class="card__link photo-link" href="">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop7.webp 1x, /img/catalog-laptop7@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="/img/catalog-tablet7.webp 1x, /img/catalog-tablet7@2x.webp 2x">
+                    <source type="image/webp" srcset="/img/catalog-mobile7.webp 1x, /img/catalog-mobile7@2x.webp 2x">
                     <source media="(min-width: 1440px)" srcset="/img/catalog-laptop7.png 1x, /img/catalog-laptop7@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="/img/catalog-tablet7.png 1x, /img/catalog-tablet7@2x.png 2x">
                     <img class="card__photo card__photo-small" src="/img/catalog-mobile7.png" srcset="/img/catalog-mobile7@2x.png"
@@ -325,10 +345,10 @@
                         <p class="card__measure">500 г</p>
                       </li>
                       <li class="card__properties">
-                        <p class="card__measure">Курица</p>
+                        <p class="card__measure">Рис</p>
                       </li>
                       <li class="card__properties">
-                        <p class="card__measure">700 Р.</p>
+                        <p class="card__measure">500 Р.</p>
                       </li>
                     </ul>
                   </div>
@@ -336,6 +356,7 @@
                 <a class="card__order button" href="">Заказать</a>
               </div>
             </li>
+
 
 
 
@@ -405,7 +426,7 @@
         </div>
         <iframe class="footer-contacts__map"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6044350650561!2d30.32194232853899!3d59.938705733169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1643231784919!5m2!1sru!2sua"
-          style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
+          allowfullscreen="" loading="lazy"></iframe>
       </section>
       <section class="footer-media">
         <div class="footer-media-wrapper">
@@ -432,8 +453,6 @@
         </div>
       </section>
     </footer>
-
-  </div>
 
   <script>
     var navMain = document.querySelector('.main-nav');
