--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Кэт энерджи</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicon/fav32.svg" type="image/svg+xml">
   <link rel="manifest" href="manifest.webmanifest">
@@ -14,33 +14,32 @@
 </head>
 
 <body class="page__body">
-  <div class="page__body-outer-wrapper">
+  <div class="page-header__wrapper">
+    <header class="page-header">
+      <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
+      <a class="page-header__title-link" href="index.html"></a>
+      <button class="page-header__toggle" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+      <nav class="main-nav main-nav-index main-nav--closed">
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--active" href="">главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">каталог продукции</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="form.html">подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </div>
 
-    <div class="page-header__wrapper">
-      <header class="page-header">
-        <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
-        <a class="page-header__title-link" href="index.html"></a>
-        <button class="page-header__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <nav class="main-nav main-nav-index main-nav--closed">
-          <ul class="main-nav__list">
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--active" href="">главная</a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="catalog.html">каталог продукции</a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="form.html">подбор программы</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-    </div>
-
-    <main class="page__main">
-      <h1 class="page__main-title visually-hidden">Cat Energy - функциональное питание для котов</h1>
+  <main class="page__main">
+    <h1 class="page__main-title visually-hidden">Cat Energy - функциональное питание для котов</h1>
+    <div class="product-info__outer-wrapper">
       <section class="product-info">
         <div class="product-info__wrapper">
           <div class="product-info__content">
@@ -49,8 +48,8 @@
             <a class="product-info__program-selection button" href="form.html">подобрать программу</a>
           </div>
           <ul class="programs">
-            <li class="programs__item">
-              <h3 class="programs__title programs__title--slim">Похудение</h3>
+            <li class="programs__item programs__item-slim">
+              <h3 class="programs__title">Похудение</h3>
               <div class="programs-description-wrapper">
                 <p class="programs__description">
                   Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
@@ -60,8 +59,8 @@
                 <a class="programs__link" href="">каталог slim</a>
               </div>
             </li>
-            <li class="programs__item">
-              <h3 class="programs__title programs__title--mass">Набор массы</h3>
+            <li class="programs__item programs__item-mass">
+              <h3 class="programs__title">Набор массы</h3>
               <div class="programs-description-wrapper">
                 <p class="programs__description">
                   Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
@@ -75,126 +74,129 @@
           </ul>
         </div>
       </section>
-      <div class="advantages__wrapper">
-        <section class="advantages">
-          <h2 class="advantages__title section-title">Как это работает</h2>
-          <ul class="advantages__list">
-            <li class="advantages__item">
-              <span class="advantages__description-number">1</span>
-              <p class="advantages__description advantages__description--bio">Функциональное питание
-                содержит только полезные
-                питательные вещества.</p>
-            </li>
-            <li class="advantages__item">
-              <p class="advantages__description advantages__description--powder">Выпускается в виде порошка,
-                который нужно лишь залить
-                кипятком и готово.</p>
-              <span class="advantages__description-number">2</span>
-            </li>
-            <li class="advantages__item">
-              <p class="advantages__description advantages__description--meal">Замените один-два приема
-                обычной еды на наше
-                функциональное питание.</p>
-              <span class="advantages__description-number">3</span>
-            </li>
-            <li class="advantages__item">
-              <p class="advantages__description advantages__description--time">Уже через месяц наслаждайтесь изменениями
-                к
-                лучшему вашего питомца!</p>
-              <span class="advantages__description-number">4</span>
-            </li>
-          </ul>
-        </section>
+    </div>
+    <div class="advantages__wrapper">
+      <section class="advantages">
+        <h2 class="advantages__title section-title">Как это работает</h2>
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <span class="advantages__description-number">1</span>
+            <p class="advantages__description advantages__description-bio">Функциональное питание
+              содержит только полезные
+              питательные вещества.</p>
+          </li>
+          <li class="advantages__item">
+            <p class="advantages__description advantages__description-powder">Выпускается в виде порошка,
+              который нужно лишь залить
+              кипятком и готово.</p>
+            <span class="advantages__description-number">2</span>
+          </li>
+          <li class="advantages__item">
+            <p class="advantages__description advantages__description-meal">Замените один-два приема
+              обычной еды на наше
+              функциональное питание.</p>
+            <span class="advantages__description-number">3</span>
+          </li>
+          <li class="advantages__item">
+            <p class="advantages__description advantages__description-time">Уже через месяц наслаждайтесь изменениями
+              к
+              лучшему вашего питомца!</p>
+            <span class="advantages__description-number">4</span>
+          </li>
+        </ul>
+      </section>
+    </div>
+    <section class="example">
+      <div class="example__wrapper">
+        <div class="example__text-wrapper">
+          <h2 class="example__title section-title">Живой пример</h2>
+          <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat
+            Energy
+            Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит
+            по
+            16
+            часов в день. </p>
+          <div class="example__results-wrapper">
+            <div class="example__stats-wrapper">
+              <div class="example__weight-wrapper">
+                <p class="example__value">5 КГ</p>
+                <span class="example__label">снижение веса</span>
+              </div>
+              <div class="example__time-wrapper">
+                <p class="example__value">60 ДНЕЙ</p>
+                <span class="example__label">затрачено времени</span>
+              </div>
+            </div>
+            <div class="example__finance-wrapper">
+              <p class="example__finance">Затраты на питание:</p>
+              <p class="example__finance">15 000 РУБ.</p>
+            </div>
+          </div>
+        </div>
+        <div class="example__slider">
+          <div class="slider__cat-image-wrapper">
+            <span class="slider__cat-image-fat"></span>
+            <span class="slider__cat-image-slim"></span>
+          </div>
+          <div class="slider__wrapper">
+            <span class="slider__text">Было</span>
+            <button class="slider__button" type="button"></button>
+            <span class="slider__text">Стало</span>
+          </div>
+        </div>
       </div>
-      <section class="example">
-        <div class="example__wrapper">
-          <div class="example__text-wrapper">
-            <h2 class="example__title section-title">Живой пример</h2>
-            <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat
-              Energy
-              Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит
-              по
-              16
-              часов в день. </p>
-            <div class="example__results-wrapper">
-              <div class="example__stats-wrapper">
-                <div class="example__weight-wrapper">
-                  <p class="example__value">5 КГ</p>
-                  <legend class="example__label">снижение веса</legend>
-                </div>
-                <div class="example__time-wrapper">
-                  <p class="example__value">60 ДНЕЙ</p>
-                  <legend class="example__label">затрачено времени</legend>
-                </div>
-              </div>
-              <div class="example__finance-wrapper">
-                <p class="example__finance">Затраты на питание:</p>
-                <p class="example__finance">15 000 РУБ.</p>
-              </div>
-            </div>
-          </div>
-          <div class="example__slider">
-            <div class="slider__cat-image-wrapper">
-              <span class="slider__cat-image-fat"></span>
-              <span class="slider__cat-image-slim"></span>
-            </div>
-            <div class="slider__wrapper">
-              <span class="slider__text">Было</span>
-              <button class="slider__button" type="button"></button>
-              <span class="slider__text">Стало</span>
-            </div>
-          </div>
+    </section>
+  </main>
+  <footer class="page__footer">
+    <section class="footer-contacts">
+      <div class="footer-contacts-wrapper">
+        <h2 class="visually-hidden">Контакты</h2>
+        <p class="footer-contacts__invitation">приглашаем <br> к сотрудничеству дилеров!</p>
+        <div class="footer-contacts__address-wrapper">
+          <address class="footer-contacts__address">ул. Большая Конюшенная, д. 19/8</address>
+          <address class="footer-contacts__address">Санкт-Петербург</address>
         </div>
-      </section>
-    </main>
-    <footer class="page__footer">
-      <section class="footer-contacts">
-        <div class="footer-contacts-wrapper">
-          <h2 class="visually-hidden">Контакты</h2>
-          <p class="footer-contacts__invitation">приглашаем <br> к сотрудничеству дилеров!</p>
-          <div class="footer-contacts__address-wrapper">
-            <address class="footer-contacts__address">ул. Большая Конюшенная, д. 19/8</address>
-            <address class="footer-contacts__address">Санкт-Петербург</address>
-          </div>
+      </div>
+      <iframe class="footer-contacts__map"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6044350650561!2d30.32194232853899!3d59.938705733169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1643231784919!5m2!1sru!2sua"
+        allowfullscreen="" loading="lazy"></iframe>
+    </section>
+    <section class="footer-media">
+      <div class="footer-media-wrapper">
+        <h2 class="visually-hidden">Медиа и социальные сети</h2>
+        <a class="footer-media__logo" href="index.html">
+          <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
+            height="24">
+        </a>
+        <ul class="social">
+          <li class="social__item">
+            <a class="social__link vk-logo" href=""></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link insta-logo" href="">
+              <!-- <svg>
+                <use xlink:href="img/icons/sprite.svg#insta-logo"></use>
+              </svg> -->
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link fb-logo" href=""></a>
+          </li>
+        </ul>
+        <div class="footer-media__HTML-academy-wrapper">
+          <a class="footer-media__HTML-academy-logo"
+            href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">HTML Academy</a>
         </div>
-        <iframe class="footer-contacts__map"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6044350650561!2d30.32194232853899!3d59.938705733169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1643231784919!5m2!1sru!2sua"
-          style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
-      </section>
-      <section class="footer-media">
-        <div class="footer-media-wrapper">
-          <h2 class="visually-hidden">Медиа и социальные сети</h2>
-          <a class="footer-media__logo" href="index.html">
-            <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
-              height="24">
-          </a>
-          <ul class="social">
-            <li class="social__item">
-              <a class="social__link vk-logo" href=""></a>
-            </li>
-            <li class="social__item">
-              <a class="social__link insta-logo" href=""></a>
-            </li>
-            <li class="social__item">
-              <a class="social__link fb-logo" href=""></a>
-            </li>
-          </ul>
-          <div class="footer-media__HTML-academy-wrapper">
-            <a class="footer-media__HTML-academy-logo"
-              href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">HTML Academy</a>
-          </div>
-        </div>
-      </section>
-    </footer>
-  </div>
-
+      </div>
+    </section>
+  </footer>
   <script>
     var navMain = document.querySelector('.main-nav');
     var navToggle = document.querySelector('.page-header__toggle');
 
     navMain.classList.remove('main-nav--nojs');
 
-    navToggle.addEventListener('click', function() {
+    navToggle.addEventListener('click', function () {
       if (navMain.classList.contains('main-nav--closed')) {
         navMain.classList.remove('main-nav--closed');
         navToggle.classList.add('page-header__toggle--cross');
