--- a/source/form.html
+++ b/source/form.html
@@ -18,7 +18,7 @@
         <button class="page-header__toggle page-header__toggle--disabled" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <nav class="main-nav main-nav--index main-nav--inline">
+        <nav class="main-nav main-nav--inline">
           <ul class="main-nav__list">
             <li class="main-nav__item">
               <a class="main-nav__link" href="index.html">главная</a>
