--- a/source/index.html
+++ b/source/index.html
@@ -81,8 +81,7 @@
         <ul class="advantages__list">
           <li class="advantages__item">
             <span class="advantages__description-number">1</span>
-            <p class="advantages__description advantages__description--bio">Функциональное питание
-              содержит только полезные
+            <p class="advantages__description advantages__description--bio">Функциональное питание<br> содержит только полезные
               питательные вещества.</p>
           </li>
           <li class="advantages__item">
@@ -92,7 +91,7 @@
             <span class="advantages__description-number">2</span>
           </li>
           <li class="advantages__item">
-            <p class="advantages__description advantages__description--meal">Замените один-два приема
+            <p class="advantages__description advantages__description--meal">Замените один-два приема <br>
               обычной еды на наше
               функциональное питание.</p>
             <span class="advantages__description-number">3</span>
@@ -100,7 +99,7 @@
           <li class="advantages__item">
             <p class="advantages__description advantages__description--time">Уже через месяц наслаждайтесь изменениями
               к
-              лучшему вашего питомца!</p>
+              лучшему<br> вашего питомца!</p>
             <span class="advantages__description-number">4</span>
           </li>
         </ul>
