--- a/source/index.html
+++ b/source/index.html
@@ -97,7 +97,10 @@
             <span class="advantages__description-number">3</span>
           </li>
           <li class="advantages__item">
-            <p class="advantages__description advantages__description--time">Уже через месяц наслаждайтесь изменениями
+            <p class="advantages__description advantages__description--time-mobile">Уже через месяц наслаждайтесь изменениями
+              к
+              лучшему вашего питомца!</p>
+            <p class="advantages__description advantages__description--time-tablet">Уже через месяц наслаждайтесь изменениями
               к
               лучшему<br> вашего питомца!</p>
             <span class="advantages__description-number">4</span>
