--- a/source/index.html
+++ b/source/index.html
@@ -6,11 +6,9 @@
   <title>Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="img/favicon/fav32.svg" type="image/svg+xml">
+  <link rel="icon" href="img/Favicon/fav32.svg" type="image/svg+xml">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-  <!--<link rel="icon" href="favicon.ico">-->
 </head>
 
 <body class="page__body">
@@ -97,10 +95,10 @@
             <span class="advantages__description-number">3</span>
           </li>
           <li class="advantages__item">
-            <p class="advantages__description advantages__description--time-mobile">Уже через месяц наслаждайтесь изменениями
+            <p class="advantages__description advantages__description--time advantages__description--time-mobile">Уже через месяц наслаждайтесь изменениями
               к
               лучшему вашего питомца!</p>
-            <p class="advantages__description advantages__description--time-tablet">Уже через месяц наслаждайтесь изменениями
+            <p class="advantages__description advantages__description--time advantages__description--time-tablet">Уже через месяц наслаждайтесь изменениями
               к
               лучшему<br> вашего питомца!</p>
             <span class="advantages__description-number">4</span>
