--- a/source/form.html
+++ b/source/form.html
@@ -6,7 +6,9 @@
   <title>Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.min.css">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <!--<link rel="icon" href="favicon.ico">-->
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/Favicon/fav32.svg" type="image/svg+xml">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body class="page__body">
@@ -33,13 +35,14 @@
         </nav>
       </header>
     </div>
+
     <main class="page__main">
-      <div class="page__form-wrapper">
-        <h1 class="page__main-title visually-hidden">Форма регистрации для подбора программы Cat energy</h1>
-        <section class="bio-data">
-          <h2 class="bio-data__title">Подбор программы</h2>
-          <p class="bio-data__description">Заполните анкету, и мы подберем программу питания для вашего кота</p>
-          <form class="data-form" action="https://echo.htmlacademy.ru/" method="post">
+      <h1 class="page__main-title visually-hidden">Форма регистрации для подбора программы Cat energy</h1>
+      <section class="bio-data">
+        <h2 class="bio-data__title">Подбор программы</h2>
+        <p class="bio-data__description">Заполните анкету, и мы подберем<br> программу питания для вашего кота</p>
+        <form class="data-form" action="https://echo.htmlacademy.ru/" method="post">
+          <div class="data-form__container">
             <div class="data-form__bio-and-program-wrapper">
               <ul class="data-form__list underline-list">
                 <li class="data-form__item">
@@ -70,35 +73,42 @@
                 </li>
               </ul>
             </div>
-            <div class="data-form__contacts-wrapper block-wrapper">
+          </div>
+          <div class="data-form__contacts-wrapper data-form__contacts-wrapper--green-line">
+            <div class="data-form__container">
               <h3 class="data-form__title">Контактные данные (владельца кота)</h3>
               <ul class="data-form__list">
                 <li class="data-form__item">
                   <label class="data-form__label" for="email">E-mail:*</label>
-                  <input class="data-form__input data-form__input--email contacts-input" type="email" name="email" id="email"
-                    placeholder="KUKLACHEV@GMAIL.COM" required>
+                  <input class="data-form__input data-form__input--email contacts-input" type="email" name="email"
+                    id="email" placeholder="KUKLACHEV@GMAIL.COM" required>
                   <svg class="data-form__icon data-form__icon--envelope">
                     <use xlink:href="img/icons/sprite.svg#envelope"></use>
                   </svg>
                 </li>
                 <li class="data-form__item">
                   <label class="data-form__label" for="phone">Телефон:*</label>
-                  <input class="data-form__input data-form__input--phone" type="tel" name="phone" id="phone" placeholder="8 (960) 900-60-90"
-                    required pattern="^[0-9]{1} \([0-9]{3}\) [0-9]{3}-[0-9]{2}-[0-9]{2}">
+                  <input class="data-form__input data-form__input--phone" type="tel" name="phone" id="phone"
+                    placeholder="8 (960) 900-60-90" required
+                    pattern="^[0-9]{1} \([0-9]{3}\) [0-9]{3}-[0-9]{2}-[0-9]{2}">
                   <svg class="data-form__icon data-form__icon--phone">
                     <use xlink:href="img/icons/sprite.svg#phone"></use>
                   </svg>
                 </li>
               </ul>
             </div>
-            <div class="data-form__comments-wrapper block-wrapper">
+          </div>
+          <div class="data-form__comments-wrapper data-form__comments-wrapper--green-line">
+            <div class="data-form__container">
               <h3 class="data-form__title">Комментарий</h3>
               <div class="data-form__comments">
                 <textarea class="data-form__comment-field" name="comment"
                   placeholder="Расскажите обо всех повадках кота"></textarea>
               </div>
             </div>
-            <div class="data-form__extra-wrapper block-wrapper">
+          </div>
+          <div class="data-form__extra-wrapper data-form__extra-wrapper--green-line">
+            <div class="data-form__container">
               <h3 class="data-form__title">Дополнительно</h3>
               <ul class="data-form__list">
                 <li class="data-form__item">
@@ -124,12 +134,13 @@
                 <p class="data-form__legend">* - Обязательные поля</p>
               </div>
             </div>
-          </form>
-        </section>
-      </div>
+          </div>
+        </form>
+      </section>
     </main>
+
     <footer class="page__footer">
-      <section class="footer-contacts">
+      <section class="footer-contacts footer-contacts--white-background">
         <div class="footer-contacts__wrapper">
           <h2 class="visually-hidden">Контакты</h2>
           <p class="footer-contacts__invitation">приглашаем <br> к сотрудничеству дилеров!</p>
