Учитывает правки для второй проверки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -54,7 +54,7 @@
         <ul class="shop__list">
           <li class="shop__card card">
             <div class="card__wrapper">
-              <a class="card__link photo-link" href="">
+              <a class="card__link card__link--photo" href="">
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)"
                     srcset="/img/catalog-laptop1.webp 1x, /img/catalog-laptop1@2x.webp 2x">
@@ -103,7 +103,7 @@
           </li>
           <li class="shop__card card">
             <div class="card__wrapper">
-              <a class="card__link photo-link" href="">
+              <a class="card__link card__link--photo" href="">
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)"
                     srcset="/img/catalog-laptop2.webp 1x, /img/catalog-laptop2@2x.webp 2x">
@@ -152,19 +152,19 @@
           </li>
           <li class="shop__card card">
             <div class="card__wrapper">
-              <a class="card__link photo-link" href="">
+              <a class="card__link card__link--photo" href="">
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)"
-                    srcset="/img/catalog-laptop4.webp 1x, /img/catalog-laptop4@2x.webp 2x">
+                    srcset="/img/catalog-laptop3.webp 1x, /img/catalog-laptop3@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)"
-                    srcset="/img/catalog-tablet4.webp 1x, /img/catalog-tablet4@2x.webp 2x">
-                  <source type="image/webp" srcset="/img/catalog-mobile4.webp 1x, /img/catalog-mobile4@2x.webp 2x">
+                    srcset="/img/catalog-tablet3.webp 1x, /img/catalog-tablet3@2x.webp 2x">
+                  <source type="image/webp" srcset="/img/catalog-mobile3.webp 1x, /img/catalog-mobile3@2x.webp 2x">
                   <source media="(min-width: 1440px)"
-                    srcset="/img/catalog-laptop4.png 1x, /img/catalog-laptop4@2x.png 2x">
+                    srcset="/img/catalog-laptop3.png 1x, /img/catalog-laptop3@2x.png 2x">
                   <source media="(min-width: 768px)"
-                    srcset="/img/catalog-tablet4.png 1x, /img/catalog-tablet4@2x.png 2x">
-                  <img class="card__photo card__photo-small" src="/img/catalog-mobile4.png"
-                    srcset="/img/catalog-mobile4@2x.png" alt="изображение товара">
+                    srcset="/img/catalog-tablet3.png 1x, /img/catalog-tablet3@2x.png 2x">
+                  <img class="card__photo card__photo-small" src="/img/catalog-mobile3.png"
+                    srcset="/img/catalog-mobile3@2x.png" alt="изображение товара">
                 </picture>
               </a>
               <div class="card__text-side">
@@ -201,7 +201,7 @@
           </li>
           <li class="shop__card card">
             <div class="card__wrapper">
-              <a class="card__link photo-link" href="">
+              <a class="card__link card__link--photo" href="">
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)"
                     srcset="/img/catalog-laptop4.webp 1x, /img/catalog-laptop4@2x.webp 2x">
@@ -250,7 +250,7 @@
           </li>
           <li class="shop__card card">
             <div class="card__wrapper">
-              <a class="card__link photo-link" href="">
+              <a class="card__link card__link--photo" href="">
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)"
                     srcset="/img/catalog-laptop5.webp 1x, /img/catalog-laptop5@2x.webp 2x">
@@ -267,7 +267,7 @@
               </a>
               <div class="card__text-side">
                 <a class="card__link" href="">
-                  <h3 class="card__title">Cat Energy PRO 500 г</h3>
+                  <h3 class="card__title">Cat Energy SLIM 500 г</h3>
                 </a>
                 <div class="card__product">
                   <ul class="card__details">
@@ -299,7 +299,7 @@
           </li>
           <li class="shop__card card">
             <div class="card__wrapper">
-              <a class="card__link photo-link" href="">
+              <a class="card__link card__link--photo" href="">
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)"
                     srcset="/img/catalog-laptop6.webp 1x, /img/catalog-laptop6@2x.webp 2x">
@@ -316,7 +316,7 @@
               </a>
               <div class="card__text-side">
                 <a class="card__link" href="">
-                  <h3 class="card__title">Cat Energy PRO 1000 г</h3>
+                  <h3 class="card__title">Cat Energy SLIM 1000 г</h3>
                 </a>
                 <div class="card__product">
                   <ul class="card__details">
@@ -348,7 +348,7 @@
           </li>
           <li class="shop__card card">
             <div class="card__wrapper">
-              <a class="card__link photo-link" href="">
+              <a class="card__link card__link--photo" href="">
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)"
                     srcset="/img/catalog-laptop7.webp 1x, /img/catalog-laptop7@2x.webp 2x">
@@ -365,7 +365,7 @@
               </a>
               <div class="card__text-side">
                 <a class="card__link" href="">
-                  <h3 class="card__title">Cat Energy PRO 500 г</h3>
+                  <h3 class="card__title">Cat Energy SLIM 500 г</h3>
                 </a>
                 <div class="card__product">
                   <ul class="card__details">
@@ -464,51 +464,52 @@
           </div>
         </div>
       </div>
-      <iframe class="footer-contacts__map"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6044350650561!2d30.32194232853899!3d59.938705733169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1643231784919!5m2!1sru!2sua"
-        allowfullscreen="" loading="lazy"></iframe>
-    </section>
-    <section class="footer-media">
-      <div class="footer-media__wrapper">
-        <h2 class="visually-hidden">Медиа и социальные сети</h2>
-        <a class="footer-media__logo" href="index.html">
-          <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
-            height="24">
-        </a>
-        <ul class="social">
-          <li class="social__item social__item--first">
-            <a class="social__link" href="">
-              <svg class="social__logo social__logo--vk">
-                <use xlink:href="img/icons/sprite.svg#vk-logo-big"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link" href="">
-              <svg class="social__logo social__logo--insta">
-                <use xlink:href="img/icons/sprite.svg#insta-logo-big"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social__item social__item--last">
-            <a class="social__link" href="">
-              <svg class="social__logo social__logo--fb">
-                <use xlink:href="img/icons/sprite.svg#fb-logo-big"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-        <div class="footer-media__HTML-academy-wrapper">
-          <a class="footer-media__HTML-academy"
-            href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">
-            <span class="footer-media__HTML-academy-label">HTML Academy</span>
-            <svg class="footer-media__HTML-academy-logo">
-              <use xlink:href="img/icons/sprite.svg#html-academy-logo"></use>
-            </svg>
-          </a>
-        </div>
+      <div class="footer-contacts__map">
+        <iframe class="footer-contacts__map-frame"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6044350650561!2d30.32194232853899!3d59.938705733169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1643231784919!5m2!1sru!2sua"
+          allowfullscreen="" loading="lazy"></iframe>
       </div>
-    </section>
+      <section class="footer-media">
+        <div class="footer-media__wrapper">
+          <h2 class="visually-hidden">Медиа и социальные сети</h2>
+          <a class="footer-media__logo" aria-label="Ссылка - На главную" href="index.html">
+            <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
+              height="24">
+          </a>
+          <ul class="social">
+            <li class="social__item social__item--first">
+              <a class="social__link" aria-label="Ссылка - Вконтакте" href="https://vk.com">
+                <svg class="social__logo social__logo--vk" width="22" height="12">
+                  <use xlink:href="img/icons/sprite.svg#vk-logo-big"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" aria-label="Ссылка - Instagram" href="https://instagram.com">
+                <svg class="social__logo social__logo--insta" width="16" height="16">
+                  <use xlink:href="img/icons/sprite.svg#insta-logo-big"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item social__item--last">
+              <a class="social__link" aria-label="Ссылка - Facebook" href="https://facebook.com">
+                <svg class="social__logo social__logo--fb" width="10" height="18">
+                  <use xlink:href="img/icons/sprite.svg#fb-logo-big"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          <div class="footer-media__HTML-academy-wrapper">
+            <a class="footer-media__HTML-academy" aria-label="Ссылка - HTML Academy"
+              href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">
+              <span class="footer-media__HTML-academy-label">HTML Academy</span>
+              <svg class="footer-media__HTML-academy-logo" width="27" height="34">
+                <use xlink:href="img/icons/sprite.svg#html-academy-logo"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </section>
   </footer>
 
   <script>
