--- a/source/index.html
+++ b/source/index.html
@@ -165,7 +165,9 @@
           </div>
           <div class="slider__wrapper">
             <button class="slider__text" type="button">Было</button>
-            <button class="slider__button" type="button"></button>
+            <div class="slider__field">
+              <button class="slider__ring" type="button"></button>
+            </div>
             <button class="slider__text" type="button">Стало</button>
           </div>
         </div>
@@ -185,45 +187,47 @@
           </div>
         </div>
       </div>
-      <iframe class="footer-contacts__map"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6044350650561!2d30.32194232853899!3d59.938705733169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1643231784919!5m2!1sru!2sua"
-        allowfullscreen="" loading="lazy"></iframe>
+      <div class="footer-contacts__map">
+        <iframe class="footer-contacts__map-frame"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6044350650561!2d30.32194232853899!3d59.938705733169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1643231784919!5m2!1sru!2sua"
+          allowfullscreen="" loading="lazy"></iframe>
+      </div>
     </section>
     <section class="footer-media">
       <div class="footer-media__wrapper">
         <h2 class="visually-hidden">Медиа и социальные сети</h2>
-        <a class="footer-media__logo" href="index.html">
+        <a class="footer-media__logo" aria-label="Ссылка - На главную" href="index.html">
           <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
             height="24">
         </a>
         <ul class="social">
           <li class="social__item social__item--first">
-            <a class="social__link" href="">
-              <svg class="social__logo social__logo--vk">
+            <a class="social__link" aria-label="Ссылка - Вконтакте" href="https://vk.com">
+              <svg class="social__logo social__logo--vk" width="22" height="12">
                 <use xlink:href="img/icons/sprite.svg#vk-logo-big"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link" href="">
-              <svg class="social__logo social__logo--insta">
+            <a class="social__link" aria-label="Ссылка - Instagram" href="https://instagram.com">
+              <svg class="social__logo social__logo--insta" width="16" height="16">
                 <use xlink:href="img/icons/sprite.svg#insta-logo-big"></use>
               </svg>
             </a>
           </li>
           <li class="social__item social__item--last">
-            <a class="social__link" href="">
-              <svg class="social__logo social__logo--fb">
+            <a class="social__link" aria-label="Ссылка - Facebook" href="https://facebook.com">
+              <svg class="social__logo social__logo--fb" width="10" height="18">
                 <use xlink:href="img/icons/sprite.svg#fb-logo-big"></use>
               </svg>
             </a>
           </li>
         </ul>
         <div class="footer-media__HTML-academy-wrapper">
-          <a class="footer-media__HTML-academy"
+          <a class="footer-media__HTML-academy" aria-label="Ссылка - HTML Academy"
             href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">
             <span class="footer-media__HTML-academy-label">HTML Academy</span>
-            <svg class="footer-media__HTML-academy-logo">
+            <svg class="footer-media__HTML-academy-logo" width="27" height="34">
               <use xlink:href="img/icons/sprite.svg#html-academy-logo"></use>
             </svg>
           </a>
